--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,16 @@
         "php": ">=5.4.0",
         "illuminate/support": ">=5.2.0"
     },
-    "minimum-stability": "dev",
-    "require": {}
+    "autoload": {
+        "classmap": [
+            "database"
+        ],
+        "psr-4": {
+            "App\\": "app/",
+
+            "Unrulynatives\\Helpers\\": "src/"
+
+        }
+    },
+    "minimum-stability": "dev"
 }
