--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
 
-            "Unrulynatives\\Helpers\\": "src/"
+
+            "Unrulynatives\\Helpers\\": "src"
 
         }
     },
