--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "unrulynatives/helpers",
-    "description": "Upvote and downvote system for Laravel",
+    "description": "Snippets, tools, views for Laravel 5.3 app",
     "authors": [
         {
             "name": "Piotr Plebaniak",
@@ -9,11 +9,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": ">=5.2.0",
-
-
-
-
+        "illuminate/support": ">=5.2.0"
     },
     "autoload": {
         "psr-4": {
@@ -23,7 +19,5 @@
 
         }
     },
-    "config": {
-        "preferred-install": "dist"
-    }
+    "minimum-stability": "dev"
 }
