maybe this will work. Solving issue with composer compatibility attempt #3.

--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
     },
     "autoload": {
         "psr-4": {
+            "App\\": "app/",
 
-
-            "Unrulynatives\\Helpers\\": "src"
+            "Unrulynatives\\Helpers\\": "src/"
 
         }
     },
     "minimum-stability": "dev"
 }
+
